--- a/Módulo 2/Desafios/estilos/style.css
+++ b/Módulo 2/Desafios/estilos/style.css
@@ -114,7 +114,7 @@ main>img{
     width: 100%;
     max-width: 350px;
 }
-main img.p{
+main img{
     display: block;
     max-width: 350px;
     margin: auto;
