--- a/Módulo 2/Desafios/estilos/style.css
+++ b/Módulo 2/Desafios/estilos/style.css
@@ -83,6 +83,9 @@ main {
     border-bottom-right-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
 }
+main strong {
+    color: #2fa966;
+}
 h2 {
     color: var(--cor6);
     font-size: 1.6em;
@@ -170,6 +173,7 @@ footer a {
     color: white;
     text-decoration: none;
 }
+
 footer a:hover {
     text-decoration: underline;
 }
