--- a/Módulo 2/Desafios/estilos/style.css
+++ b/Módulo 2/Desafios/estilos/style.css
@@ -83,9 +83,6 @@ main {
     border-bottom-right-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
 }
-strong {
-    color: var(--cor4);
-}
 h2 {
     color: var(--cor6);
     font-size: 1.6em;
@@ -103,6 +100,9 @@ p {
     text-align: justify;
     text-indent: 15px;
     margin: 15px 0px;
+}
+main strong {
+    color: var(--cor4);
 }
 main a {
     background-color: var(--cor1);
